--- a/handler/checker/tasks/observer/system/parameter_tcp_rmem.yaml
+++ b/handler/checker/tasks/observer/system/parameter_tcp_rmem.yaml
@@ -16,7 +16,7 @@ task:
         report_type: warning
         verify_type: between
         verify: "[4096,8192]"
-        err_msg: 'net.ipv4.tcp_rmem_min : #{tcp_rmem_min} is a non recommended value, recommended value is 4096 ≤ min ≤ 8192'
+        err_msg: 'net.ipv4.tcp_rmem_min : #{tcp_rmem_min}. recommended: 4096 ≤ min ≤ 8192'
     - type: ssh
       ssh: "echo \"#{tcp_rmem}\" | awk '{print $2}'"
       result:
@@ -24,7 +24,7 @@ task:
         report_type: warning
         verify_type: between
         verify: "[65536,131072]"
-        err_msg: 'net.ipv4.tcp_rmem_default : #{tcp_rmem_default}. net.ipv4.tcp_rmem_default from net.ipv4.tcp_rmem. It is a non recommended value, recommended value :is 65536 ≤ default≤ 131072'
+        err_msg: 'net.ipv4.tcp_rmem_default : #{tcp_rmem_default}. net.ipv4.tcp_rmem_default from net.ipv4.tcp_rmem. recommended: is 65536 ≤ default≤ 131072'
     - type: ssh
       ssh: "echo \"#{tcp_rmem}\" | awk '{print $3}'"
       result:
@@ -32,4 +32,4 @@ task:
         report_type: warning
         verify_type: between
         verify: "[8388608,16777216]"
-        err_msg: 'net.ipv4.tcp_rmem_max : #{tcp_rmem_max}. net.ipv4.tcp_rmem_max from net.ipv4.tcp_rmem. It is a non recommended value, recommended value is 65536 ≤ max≤ 131072'
+        err_msg: 'net.ipv4.tcp_rmem_max : #{tcp_rmem_max}. net.ipv4.tcp_rmem_max from net.ipv4.tcp_rmem. recommended: 65536 ≤ max≤ 131072'
