--- a/handler/checker/tasks/observer/system/parameter_ip_local_port_range.yaml
+++ b/handler/checker/tasks/observer/system/parameter_ip_local_port_range.yaml
@@ -8,7 +8,7 @@ task:
       result:
         set_value: ip_local_port_range
         verify: '[[ -n "$ip_local_port_range" && "$ip_local_port_range" != "-1" ]]'
-        err_msg: "ip_local_port_range is #{ip_local_port_range} . Please check net.ipv4.ip_local_port_range on your node"
+        err_msg: "ip_local_port_range : #{ip_local_port_range} . Please check net.ipv4.ip_local_port_range on your node"
     - type: ssh
       ssh: "echo \"#{ip_local_port_range}\" | awk '{print $1}'"
       result:
@@ -16,7 +16,7 @@ task:
         report_type: warning
         verify_type: equal
         verify: 3500
-        err_msg: 'ip_local_port_range_min : #{ip_local_port_range_min} is a non recommended value, recommended value is 3500'
+        err_msg: 'ip_local_port_range_min : #{ip_local_port_range_min}. recommended: 3500'
     - type: ssh
       ssh: "echo \"#{ip_local_port_range}\" | awk '{print $2}'"
       result:
@@ -24,4 +24,4 @@ task:
         report_type: warning
         verify_type: equal
         verify: 65535
-        err_msg: 'ip_local_port_range_max : #{ip_local_port_range_max} is a non recommended value, recommended value is 65535'
+        err_msg: 'ip_local_port_range_max : #{ip_local_port_range_max}. recommended: 65535'
