--- a/handler/checker/tasks/observer/system/parameter_tcp_wmem.yaml
+++ b/handler/checker/tasks/observer/system/parameter_tcp_wmem.yaml
@@ -14,7 +14,7 @@ task:
         report_type: warning
         verify_type: between
         verify: "[4096,8192]"
-        err_msg: 'net.ipv4.tcp_wmem_min : #{tcp_wmem_min} is a non recommended value, recommended value is 4096 ≤ min ≤ 8192'
+        err_msg: 'net.ipv4.tcp_wmem_min : #{tcp_wmem_min}. recommended: 4096 ≤ min ≤ 8192'
     - type: ssh
       ssh: "echo \"#{tcp_wmem}\" | awk '{print $2}'"
       result:
@@ -22,7 +22,7 @@ task:
         report_type: warning
         verify_type: between
         verify: "[65536,131072]"
-        err_msg: 'net.ipv4.tcp_wmem_default : #{tcp_wmem_default} is a non recommended value, recommended value :is 65536 ≤ default≤ 131072'
+        err_msg: 'net.ipv4.tcp_wmem_default : #{tcp_wmem_default}. recommended: is 65536 ≤ default≤ 131072'
     - type: ssh
       ssh: "echo \"#{tcp_wmem}\" | awk '{print $3}'"
       result:
@@ -30,4 +30,4 @@ task:
         report_type: warning
         verify_type: between
         verify: "[8388608,16777216]"
-        err_msg: 'net.ipv4.tcp_wmem_max : #{tcp_wmem_max} is a non recommended value, recommended value is 65536 ≤ max≤ 131072'
+        err_msg: 'net.ipv4.tcp_wmem_max : #{tcp_wmem_max}. recommended: 65536 ≤ max≤ 131072'
