--- a/handler/checker/tasks/observer/system/ulimit_parameter.yaml
+++ b/handler/checker/tasks/observer/system/ulimit_parameter.yaml
@@ -8,21 +8,21 @@ task:
         set_value: parameter
         report_type: warning
         verify: "[ 'unlimited' == ${parameter} ]"
-        err_msg: 'On ip : #{remote_ip}, ulimit -c is #{parameter} . It is a non recommended value, and the recommended value is unlimited. Please refer to the official website document for the configuration method'
+        err_msg: 'On ip : #{remote_ip}, ulimit -c is #{parameter} . recommended: unlimited.'
     - type: ssh
       ssh: ulimit -u
       result:
         set_value: parameter
         report_type: warning
         verify: "[ '655360' == ${parameter} ]"
-        err_msg: 'On ip : #{remote_ip}, ulimit -u is #{parameter} . It is a non recommended value, and the recommended value is 655360. Please refer to the official website document for the configuration method'
+        err_msg: 'On ip : #{remote_ip}, ulimit -u is #{parameter} . recommended: 655360.'
     - type: ssh
       ssh: ulimit -s
       result:
         set_value: parameter
         report_type: warning
         verify: "[ 'unlimited' == ${parameter} ]"
-        err_msg: 'On ip : #{remote_ip}, ulimit -s is #{parameter} . It is a non recommended value, and the recommended value is unlimited. Please refer to the official website document for the configuration method'
+        err_msg: 'On ip : #{remote_ip}, ulimit -s is #{parameter} . recommended: unlimited.'
     - type: ssh
       ssh: ulimit -n
       result:
@@ -30,4 +30,4 @@ task:
         report_type: warning
         verify_type: equal
         verify: 655350
-        err_msg: 'On ip : #{remote_ip}, ulimit -n is #{parameter} . It is a non recommended value, and the recommended value is unlimited. Please refer to the official website document for the configuration method'
+        err_msg: 'On ip : #{remote_ip}, ulimit -n is #{parameter} . recommended: unlimited.'
