--- a/handler/checker/tasks/observer/system/core_pattern.yaml
+++ b/handler/checker/tasks/observer/system/core_pattern.yaml
@@ -5,7 +5,5 @@ task:
         parameter: kernel.core_pattern
         result:
           set_value: core_pattern
-          verify: "[[ $core_pattern == *" "* ]]"
+          verify: '[[ $core_pattern == *" "* ]]'
           err_msg: 'clock_source: #{clock_source}. recommended: tsc. Uneven CPU utilization during pressure testing resulted in low TPS during pressure testing'
-
-
