--- a/handler/checker/tasks/observer/system/clock_source.yaml
+++ b/handler/checker/tasks/observer/system/clock_source.yaml
@@ -5,7 +5,7 @@ task:
         ssh: "cat /sys/devices/system/clocksource/clocksource0/current_clocksource"
         result:
           set_value: clock_source
-          verify: "[ \"${clock_source}\" == \"tsc\" ]"
+          verify: "[[ \"${clock_source}\" == \"tsc\" || \"${clock_source}\" == \"arch_sys_counter\" || \"${clock_source}\" == \"kvm-clock\" ]]"
           err_msg: 'clock_source: #{clock_source}. recommended: tsc. Uneven CPU utilization during pressure testing resulted in low TPS during pressure testing'
 
 
