--- a/handler/checker/tasks/observer/cluster/deadlocks.yaml
+++ b/handler/checker/tasks/observer/cluster/deadlocks.yaml
@@ -1,6 +1,7 @@
 info: "Check whether there is a deadlock."
 task:
   - version: "[4.0.0.0,*]"
+    execute_type: "one_node"
     steps:
     - type: sql
       sql: 'select count(0) from oceanbase.DBA_OB_DEADLOCK_EVENT_HISTORY;'
@@ -9,4 +10,4 @@ task:
         verify_type: equal
         report_type: warning
         verify: 0
-        err_msg: "There is a deadlock."
+        err_msg: "There is a deadlock. Please check on the oceanbase.DBA_OB_DEADLOCK_EVENT_HISTORY"
