--- a/conf/inner_config.yml
+++ b/conf/inner_config.yml
@@ -4,6 +4,7 @@ obdiag:
     config_backup_dir: ~/.obdiag/backup_conf
     file_number_limit: 20
     file_size_limit: 2G
+    dis_rsa_algorithms: 0
   logger:
     log_dir: ~/.obdiag/log
     log_filename: obdiag.log
