check add column_storage_poc's tasks

--- a/handler/checker/tasks/observer/column_storage/tenant_parameters.yaml
+++ b/handler/checker/tasks/observer/column_storage/tenant_parameters.yaml
@@ -75,28 +75,28 @@ task:
         report_type: warning
         err_msg: 'parallel_min_scan_time_threshold is recommended "10". There are some tenant need change: #{tenant_ids}'
     - type: sql
-      sql: 'SELECT GROUP_CONCAT(DISTINCT a.TENANT_ID) from oceanbase.DBA_OB_TENANTS a, oceanbase.GV$OB_UNITS b , oceanbase.CDB_OB_SYS_VARIABLES c WHERE a.TENANT_ID=b.TENANT_ID and a.TENANT_ID=c.TENANT_ID and a.TENANT_ID>1000 and b.MAX_CPU >0 and c.name ="parallel_servers_target"  and b.MAX_CPU*10<>c.value;'
+      sql: 'SELECT GROUP_CONCAT(DISTINCT a.TENANT_ID) from oceanbase.DBA_OB_TENANTS a, oceanbase.GV$OB_UNITS b , oceanbase.CDB_OB_SYS_VARIABLES c WHERE a.TENANT_ID=b.TENANT_ID and a.TENANT_ID=c.TENANT_ID and a.TENANT_ID>1000 and b.MIN_CPU >0 and c.name ="parallel_servers_target"  and b.MIN_CPU*10<>c.value;'
       result:
         set_value: tenant_ids
         verify: '[ -z "$tenant_ids" ]'
         report_type: warning
         err_msg: 'parallel_servers_target is recommended cpu_count*10. There are some tenant need change: #{tenant_ids}'
     - type: sql
-      sql: 'SELECT GROUP_CONCAT(DISTINCT a.TENANT_ID) from oceanbase.DBA_OB_TENANTS a, oceanbase.GV$OB_UNITS b , oceanbase.CDB_OB_SYS_VARIABLES c WHERE a.TENANT_ID=b.TENANT_ID and a.TENANT_ID=c.TENANT_ID and a.TENANT_ID>1000 and b.MAX_CPU >0 and c.name ="parallel_degree_limit"  and b.MAX_CPU*2<>c.value;'
+      sql: 'SELECT GROUP_CONCAT(DISTINCT a.TENANT_ID) from oceanbase.DBA_OB_TENANTS a, oceanbase.GV$OB_UNITS b , oceanbase.CDB_OB_SYS_VARIABLES c WHERE a.TENANT_ID=b.TENANT_ID and a.TENANT_ID=c.TENANT_ID and a.TENANT_ID>1000 and b.MIN_CPU >0 and c.name ="parallel_degree_limit"  and b.MIN_CPU*2<>c.value;'
       result:
         set_value: tenant_ids
         verify: '[ -z "$tenant_ids" ]'
         report_type: warning
         err_msg: 'parallel_degree_limit is recommended cpu_count*2. There are some tenant need change: #{tenant_ids}'
     - type: sql
-      sql: 'SELECT GROUP_CONCAT(DISTINCT a.TENANT_ID) FROM oceanbase.DBA_OB_TENANTS a, oceanbase.GV$OB_UNITS b , oceanbase.GV$OB_PARAMETERS c WHERE a.TENANT_ID=b.TENANT_ID and a.TENANT_ID=c.TENANT_ID and a.TENANT_ID>1000 and b.MAX_CPU >0 and c.name ="compaction_low_thread_score" and b.MAX_CPU<>c.value;'
+      sql: 'SELECT GROUP_CONCAT(DISTINCT a.TENANT_ID) FROM oceanbase.DBA_OB_TENANTS a, oceanbase.GV$OB_UNITS b , oceanbase.GV$OB_PARAMETERS c WHERE a.TENANT_ID=b.TENANT_ID and a.TENANT_ID=c.TENANT_ID and a.TENANT_ID>1000 and b.MIN_CPU >0 and c.name ="compaction_low_thread_score" and b.MIN_CPU<>c.value;'
       result:
         set_value: tenant_ids
         verify: '[ -z "$tenant_ids" ]'
         report_type: warning
         err_msg: 'compaction_low_thread_score is recommended equal cpu_count. There are some tenant need change: #{tenant_ids}'
     - type: sql
-      sql: 'SELECT GROUP_CONCAT(DISTINCT a.TENANT_ID) FROM oceanbase.DBA_OB_TENANTS a, oceanbase.GV$OB_UNITS b , oceanbase.GV$OB_PARAMETERS c WHERE a.TENANT_ID=b.TENANT_ID and a.TENANT_ID=c.TENANT_ID and a.TENANT_ID>1000 and b.MAX_CPU >0 and c.name ="compaction_mid_thread_score" and b.MAX_CPU<>c.value;'
+      sql: 'SELECT GROUP_CONCAT(DISTINCT a.TENANT_ID) FROM oceanbase.DBA_OB_TENANTS a, oceanbase.GV$OB_UNITS b , oceanbase.GV$OB_PARAMETERS c WHERE a.TENANT_ID=b.TENANT_ID and a.TENANT_ID=c.TENANT_ID and a.TENANT_ID>1000 and b.MIN_CPU >0 and c.name ="compaction_mid_thread_score" and b.MIN_CPU<>c.value;'
       result:
         set_value: tenant_ids
         verify: '[ -z "$tenant_ids" ]'
