--- a/handler/checker/tasks/observer/disk/clog_abnormal_file.yaml
+++ b/handler/checker/tasks/observer/disk/clog_abnormal_file.yaml
@@ -4,7 +4,7 @@ task:
   - version: "[4.0.0.0,*]"
     steps:
     - type: ssh
-      ssh: 'find #{remote_redo_dir} -name "clog"'
+      ssh: 'find #{remote_redo_dir}/ -name "clog"'
       result:
         set_value: log_dir_path
         verify: '[ -n "${log_dir_path}" ]'
