--- a/handler/checker/tasks/observer/system/core_pattern.yaml
+++ b/handler/checker/tasks/observer/system/core_pattern.yaml
@@ -8,14 +8,13 @@ task:
           verify: '[[ $core_pattern != *" "* ]]'
           err_msg: 'kernel.core_pattern: #{core_pattern} , is not recommended for configuring functions other than the specified core path'
       - type: ssh
-        ssh: 'dirname ${core_pattern}'
+        ssh: 'dirname "${core_pattern}"'
         result:
           set_value: core_path
           verify: '[ -d "$core_path" ]'
           err_msg: 'core_path: #{core_path}  is not exist. Please create it.'
-#d
       - type: ssh
-        ssh: "df \"$directory\" | awk 'NR==2 {print $4}'"
+        ssh: "df \"#{core_path}\" | awk 'NR==2 {print $4}'"
         result:
           set_value: core_path_free_space
           verify_type: min
