--- a/handler/checker/tasks/observer/system/core_pattern.yaml
+++ b/handler/checker/tasks/observer/system/core_pattern.yaml
@@ -19,5 +19,5 @@ task:
           set_value: core_path_free_space
           verify_type: min
           verify: 10485760
-          err_msg: 'core_path: #{core_path}  free_space: core_path_free_space need > 10485760KB (10GB)'
+          err_msg: 'core_path: #{core_path}  free_space: #{core_path_free_space} need > 10485760KB (10GB)'
 
