--- a/requirements3.txt
+++ b/requirements3.txt
@@ -20,7 +20,7 @@ zstandard==0.17.0
 pycryptodome~=3.14.1
 pick==1.2.0
 PyYAML==6.0
-prettytable==3.5.0
+prettytable==3.10.0
 oyaml==1.0
 xmltodict==0.13.0
 subprocess32==3.5.4
@@ -34,4 +34,5 @@ ruamel.yaml==0.17.4
 progressbar==2.5
 halo==0.0.31
 inspect2==0.1.2
+sqlgpt-parser>=0.0.1a5
 netifaces==0.11.0
