--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -22,11 +22,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-
-          yum install rh-python38 rh-python38-python-devel -y
-          echo "source /opt/rh/rh-python38/enable" >/etc/profile.d/python38.sh
-          echo "export X_SCLS=\"rh-python38\"" >>/etc/profile.d/python38.sh
-          source /etc/profile.d/python38.sh 
+          yum install -y python3.8
           ldd --version
           python3 -m pip install --upgrade pip setuptools wheel
           pip3 install -r requirements3.txt
