--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -34,6 +34,12 @@ jobs:
           pwd
           ls -lh
           export RELEASE=`date +%Y%m%d%H%M`
+          sed -i 's/pip install -r requirements3.txt\n\
+          curl https:\/\/bootstrap.pypa.io\/get-pip.py -o get-pip.py\n\
+          python3 get-pip.py\n\
+          pip3 uninstall urllib3\n\
+          pip3 install urllib3==1.26.6\n\
+          pip3 install -r requirements3.txt/' ./rpm/oceanbase-diagnostic-tool.spec
           cat ./rpm/oceanbase-diagnostic-tool.spec
           python3 -m pip install --upgrade pip setuptools wheel
           python3 --version
